add temp phone down message

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
 
   </header>
 
+  <div class="temp-phone">
+    <h3>- Thursday 8/24 -  </h3>
+    <h3>We appologize for any inconvenience, our phones are temporarely down for the day.</h3>
 
+  </div>
 
   <div class="index">
 
