--- a/admin/index.html
+++ b/admin/index.html
@@ -10,7 +10,10 @@
 
 </head>
 <body>
+  <div data-netlify-identity-menu></div>
+  <div data-netlify-identity-button>Login with Netlify Identity</div>
   <!-- Include the script that builds the page and powers Netlify CMS -->
+  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
 </body>
 </html>
